--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body style="background-color: #e3e6f2; place-items: center;">
         <div class="ancestor">
             <div class="con">
-                <div style="grid-column: 1/11; grid-row: 1/3; text-align: center;">
-                    <h1 style="font-family: avant; font-size: 10vh; margin-top: 2vh; color: #000000;">9ТФ_NEU</h1>
+                <div class="block" style="grid-column: 1/11; grid-row: 1/3; text-align: center;">
+                    <h1 style="font-family: avant; font-size: 3.5em; margin-top: 2vh; color: #000000;">9ТФ_NEU</h1>
                 </div>
                 <div class="block" style="grid-column: 1/3; grid-row: 3/6;">
                 
