--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="ancestor">
             <div class="con">
                 <div class="block" style="grid-column: 1/11; grid-row: 1/3; text-align: center;">
-                    <h1 style="font-family: avant; font-size: 100px; margin-top: 0; color: #000000;">9ТФ_NEU</h1>
+                    <h1 style="font-family: avant; font-size: 100px; margin-top: 0; color: #000000;">9ТФ_NEUg</h1>
                 </div>
                 <div class="block" style="grid-column: 1/3; grid-row: 3/6;">
                 
