--- a/neu(1000px)/index.html
+++ b/neu(1000px)/index.html
@@ -58,8 +58,8 @@
                 <div class="block" style="grid-column: 5/7; grid-row: 9/10;">
                     <input id="brightrange" class="brightrange" type="range" min="0" max="100" value="50">
                 </div>
-                <div class="block" style="grid-column: 5/6; grid-row: 10/11;">
-                
+                <div class="blockint" style="grid-column: 5/6; grid-row: 10/11; padding: 20%;">
+                    <img src="img/power.svg" alt="" style="width: 100%; fill: #e3e6f2;">
                 </div>
                 <div class="block" style="grid-column: 6/11; grid-row: 10/11;">
                 
