--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-bright bg-bright">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="text-align: left; white-space: nowrap;">
-                <img src="img/logo" alt="" style="height: 20px; margin-right: 10px; margin-left: 10px;">
+                <img src="img/logo.png" alt="" style="height: 20px; margin-right: 10px; margin-left: 10px;">
                 <span style="font-family: stetica;">Scribble </span>
                 <span style="font-family: stetica-light;">Studio</span>
             </a>
