--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
                 <!-- Language Selector -->
                 <select id="languageSelector" class="form-select" style="max-width: 120px; margin-right: 20px;">
-                    <option value="ko" selected>
+                    <option value="ko" selected style="font-family: stetica;">
                         한국어
                     </option>
-                    <option value="en">
+                    <option value="en" style="font-family: stetica;">
                        English
                     </option>
-                    <option value="ru">
+                    <option value="ru" style="font-family: stetica;">
                         Русский
                     </option>
                 </select>
@@ -41,16 +41,16 @@
                 <!-- Menu Items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" data-key="home">홈</a>
+                        <a class="nav-link active" aria-current="page" href="#" data-key="home" style="font-family: stetica;">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-key="services">서비스</a>
+                        <a class="nav-link" href="#" data-key="services" style="font-family: stetica;">서비스</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-key="portfolio">포트폴리오</a>
+                        <a class="nav-link" href="#" data-key="portfolio" style="font-family: stetica;">포트폴리오</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-key="contacts">연락처</a>
+                        <a class="nav-link" href="#" data-key="contacts" style="font-family: stetica;">연락처</a>
                     </li>
                 </ul>
             </div>
@@ -109,7 +109,7 @@
 
     <!-- Services Section -->
 <div class="container py-5" id="services">
-    <h2 class="text-center mb-4" data-key="servicesTitle">우리의 서비스</h2>
+    <h2 class="text-left mb-4" data-key="servicesTitle" style="font-family: stetica-bold;"><b>어떤 서비스를 찾으시나요?</b></h2>
     <div class="row">
         <!-- Service 1 -->
         <div class="col-md-3 mb-4">
@@ -328,7 +328,7 @@
 
 <!-- Portfolio Section -->
 <div class="container py-5" id="portfolio">
-    <h2 class="text-center mb-4" data-key="portfolioTitle">포트폴리오</h2>
+    <h2 class="text-left mb-4" data-key="portfolioTitle" style="font-family: stetica-bold;"><b>지금까지 완성했던 작업물</b></h2>
     
     <!-- Row for Collage -->
     <div class="row g-4">
@@ -399,7 +399,7 @@
 
 <!-- Contact Section -->
 <div class="container py-5" id="contacts">
-    <h2 class="text-center mb-4" data-key="contactTitle">연락처</h2>
+    <h2 class="text-left mb-4" data-key="contactTitle" style="font-family: stetica-bold;"><b>궁금한 점이 있으세요?</b></h2>
     <div class="row justify-content-center">
         <!-- Contact Info (Phone, Email, Social Media) -->
         <div class="col-md-4">
