--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <img src="img/icons/telegram.png" alt="Instagram" style="max-width: 30px; max-height: 30px;">
                     </a>
                     <a href="https://www.linkedin.com" target="_blank" class="mx-2">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/LinkedIn_Logo_2022.svg" alt="LinkedIn" style="width: 30px; height: 30px;">
+                        <img src="img/icons/instagram.png" alt="LinkedIn" style="max-width: 30px; max-height: 30px;">
                     </a>
                 </div>
             </div>
