--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="icon" href="img/icon.png">
 </head>
 <body>
+    <!-- Scroll to Top Button -->
+    <button id="scrollToTopBtn" class="btn btn-bright" style="position: fixed; bottom: 20px; right: 20px; display: none; z-index: 1000; border-radius: 50%; width: 50px; height: 50px; border-color: black;">
+        ▲
+    </button>
+
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-bright bg-bright">
         <div class="container-fluid">
@@ -350,8 +355,8 @@
 
 
     
-    <footer class="bg-dark text-white text-center py-3">
-        <p data-key="footer">&copy; 2024 내 웹사이트 | 모든 권리 보유</p>
+    <footer class="bg-bright text-black text-center py-3" style="background-color: rgb(225, 225, 225);">
+        <p data-key="footer">&copy; 2024 Scribble | 모든 권리 보유</p>
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
@@ -403,6 +408,29 @@
                 behavior: 'smooth' // 부드러운 스크롤 효과
             });
         });
+    </script>
+    <script>
+        // 맨 위로 스크롤 버튼 요소
+const scrollToTopBtn = document.getElementById('scrollToTopBtn');
+
+// 스크롤 이벤트 리스너 추가
+window.addEventListener('scroll', () => {
+    // 페이지가 특정 높이 이상 스크롤되면 버튼 표시
+    if (window.scrollY > 300) {
+        scrollToTopBtn.style.display = 'block';
+    } else {
+        scrollToTopBtn.style.display = 'none';
+    }
+});
+
+// 버튼 클릭 시 페이지 맨 위로 스크롤
+scrollToTopBtn.addEventListener('click', () => {
+    window.scrollTo({
+        top: 0,
+        behavior: 'smooth' // 부드러운 스크롤 효과
+    });
+});
+
     </script>
     
     <script src="lang.json"></script>
