--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- Services Section -->
 <div class="container py-5" id="services">
     <h2 class="text-left mb-4" data-key="servicesTitle" style="font-family: stetica-bold;"><b>어떤 서비스를 찾으시나요?</b></h2>
-    <p data-key="servicesExplanation" style="font-family: stetica; max-width: 700px;">저희 스튜디오는 디지털 디자인 또는 아트와 관련된 여러 서비스를 제공합니다. 포토샵·일러스트레이터·프리미어프로·에프터이펙 등 어도비 계열 프로그램, MS오피스 프로그램, Medibang과 같은 페인팅 프로그램 등 다양한 소프트웨어를 광범위하게 활용하여 작업합니다. 저희 주요 소비자층은 개인 주문자로, 데뷔한 지 얼마 되지 않은 음반 아티스트나 소규모 유튜버의 의뢰를 자주 받습니다. 이를 감안하여 저렴한 가격에 소비자가 만족할 만한 결과물을 제공하도록 노력하고 있습니다.</p>
+    <p data-key="serviceExplanation" style="font-family: stetica; max-width: 700px;">저희 스튜디오는 디지털 디자인 또는 아트와 관련된 여러 서비스를 제공합니다. 포토샵·일러스트레이터·프리미어프로·에프터이펙 등 어도비 계열 프로그램, MS오피스 프로그램, Medibang과 같은 페인팅 프로그램 등 다양한 소프트웨어를 광범위하게 활용하여 작업합니다. 저희 주요 소비자층은 개인 주문자로, 데뷔한 지 얼마 되지 않은 음반 아티스트나 소규모 유튜버의 의뢰를 자주 받습니다. 이를 감안하여 저렴한 가격에 소비자가 만족할 만한 결과물을 제공하도록 노력하고 있습니다.</p>
     <br>
     <br>
     <div class="row">
@@ -233,7 +233,7 @@
 <!-- Portfolio Section -->
 <div class="container py-5" id="portfolio">
     <h2 class="text-left mb-4" data-key="portfolioTitle" style="font-family: stetica-bold;"><b>지금까지 완성했던 작업물</b></h2>
-    <p data-key="servicesExplanation" style="font-family: stetica; max-width: 700px;">저희는 기본적으로 최신 트렌드를 따르되 깔끔하고 미니멀한 디자인을 지향합니다. 대표적인 예시로 Scribble의 BI와 이 웹사이트가 있죠. 하지만 주문자의 요청이나 맥락에 따라 스타일을 유연하게 바꾸어 작업하기도 합니다. 아래의 작업물을 참고하면 저희 역량과 지향점을 이해하는데 도움이 될 것입니다.</p>
+    <p data-key="portfolioExplanation" style="font-family: stetica; max-width: 700px;">저희는 기본적으로 최신 트렌드를 따르되 깔끔하고 미니멀한 디자인을 지향합니다. 대표적인 예시로 Scribble의 BI와 이 웹사이트가 있죠. 하지만 주문자의 요청이나 맥락에 따라 스타일을 유연하게 바꾸어 작업하기도 합니다. 아래의 작업물을 참고하면 저희 역량과 지향점을 이해하는데 도움이 될 것입니다.</p>
     <br>
     <br>
     
@@ -307,7 +307,7 @@
 <!-- Contact Section -->
 <div class="container py-5" id="contacts">
     <h2 class="text-left mb-4" data-key="contactTitle" style="font-family: stetica-bold;"><b>궁금한 점이 있으세요?</b></h2>
-    <p data-key="servicesExplanation" style="font-family: stetica; max-width: 700px;">궁금한 점이 있거나, 주문을 진행하고 싶다면 언제나 편하게 연락 주세요! 최대한 빠르게 상담해드리고 주문 접수를 도와드리겠습니다.</p>
+    <p data-key="contactsExplanation" style="font-family: stetica; max-width: 700px;">궁금한 점이 있거나, 주문을 진행하고 싶다면 언제나 편하게 연락 주세요! 최대한 빠르게 상담해드리고 주문 접수를 도와드리겠습니다.</p>
     <br>
     <br>
     <div class="row justify-content-center">
@@ -315,14 +315,14 @@
         <div class="col-md-4">
             <div class="contact-item text-center">
                 <h5 data-key="phoneTitle">전화번호</h5>
-                <p><a href="tel:+1234567890">+1 234 567 890</a></p>
+                <p><a href="tel:-">-</a></p>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="contact-item text-center">
                 <h5 data-key="emailTitle">이메일</h5>
-                <p><a href="mailto:contact@example.com">contact@example.com</a></p>
+                <p><a href="mailto:fzytail@gmail.com">fzytail@gmail.com</a></p>
             </div>
         </div>
 
