--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <a href="https://t.me/ScribbleSupportBot" target="_blank" class="mx-2">
                         <img src="img/icons/telegram.png" alt="Instagram" style="max-width: 30px; max-height: 30px;">
                     </a>
-                    <a href="https://www.linkedin.com" target="_blank" class="mx-2">
+                    <a href="https://www.instagram.com/scribbbbbledesign/profilecard/?igsh=MXF0eXF4bnc0bjQybw==" target="_blank" class="mx-2">
                         <img src="img/icons/instagram.png" alt="LinkedIn" style="max-width: 30px; max-height: 30px;">
                     </a>
                 </div>
