--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <br>
     <div class="row">
         <!-- Service 1 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 1">
+                <img src="img/serviceicon/service01.png" class="card-img-top" alt="Service 1">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service1Title">앨범아트 디자인</h5>
                     <p class="card-text" data-key="service1Description">서비스 1의 설명입니다.</p>
@@ -130,9 +130,9 @@
             </div>
         </a>
         <!-- Service 2 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 2">
+                <img src="img/serviceicon/service02.png" class="card-img-top" alt="Service 2">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service2Title">로고 디자인</h5>
                     <p class="card-text" data-key="service2Description">서비스 2의 설명입니다.</p>
@@ -140,7 +140,7 @@
             </div>
         </a>
         <!-- Service 3 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 3">
                 <div class="card-body">
@@ -150,7 +150,7 @@
             </div>
         </a>
         <!-- Service 4 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 4">
                 <div class="card-body">
@@ -163,7 +163,7 @@
     <!-- Row 2 -->
     <div class="row">
         <!-- Service 5 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 5">
                 <div class="card-body">
@@ -173,7 +173,7 @@
             </div>
         </a>
         <!-- Service 6 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 6">
                 <div class="card-body">
@@ -183,7 +183,7 @@
             </div>
         </a>
         <!-- Service 7 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 7">
                 <div class="card-body">
@@ -193,7 +193,7 @@
             </div>
         </a>
         <!-- Service 8 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 8">
                 <div class="card-body">
@@ -206,7 +206,7 @@
     <!-- Row 3 -->
     <div class="row">
         <!-- Service 9 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 9">
                 <div class="card-body">
@@ -216,7 +216,7 @@
             </div>
         </a>
         <!-- Service 10 -->
-        <a href="" class="col-md-3 mb-4 expandonhover">
+        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 10">
                 <div class="card-body">
