--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
                 <div class="flex-grow-1"></div>
 
                 <!-- Language Selector -->
-                <select id="languageSelector" class="form-select" style="max-width: 120px; margin-right: 20px;">
-                    <option value="ko" selected style="font-family: stetica;">
-                        한국어
-                    </option>
-                    <option value="en" style="font-family: stetica;">
-                       English
-                    </option>
-                    <option value="ru" style="font-family: stetica;">
-                        Русский
-                    </option>
-                </select>
+                <div style="display: flex;">
+                    <img src="img/language.svg" alt="" style="height: 20px; margin-right: 20px; margin-top: 10px;">
+                    <select id="languageSelector" class="form-select" style="max-width: 180px; margin-right: 20px;">
+                        <option value="ko" selected style="font-family: stetica;" data-img_src="img/langicon/ru.png">
+                            Korean (한국어)
+                        </option>
+                        <option value="en" style="font-family: stetica;">
+                        English
+                        </option>
+                        <option value="ru" style="font-family: stetica;">
+                            Russian (Русский)
+                        </option>
+                    </select>
+                </div>
 
                 <!-- Menu Items -->
                 <ul class="navbar-nav">
@@ -125,7 +128,7 @@
                 <img src="img/serviceicon/service01.png" class="card-img-top" alt="Service 1">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service1Title">앨범아트 디자인</h5>
-                    <p class="card-text" data-key="service1Description">서비스 1의 설명입니다.</p>
+                    <p class="card-text" data-key="service1Description">음원을 시각적으로 표현할 최고의 방법을 모색하여 정서와 분위기를 효과적으로 전달할 수 있는 앨범 아트를 제작합니다.</p>
                 </div>
             </div>
         </a>
@@ -135,27 +138,27 @@
                 <img src="img/serviceicon/service02.png" class="card-img-top" alt="Service 2">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service2Title">로고 디자인</h5>
-                    <p class="card-text" data-key="service2Description">서비스 2의 설명입니다.</p>
+                    <p class="card-text" data-key="service2Description">뚜렷한 정체성을 드러내야 하는 개인, 기업 또는 기타 단체에게 적합한 로고를 제작합니다.</p>
                 </div>
             </div>
         </a>
         <!-- Service 3 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 3">
+                <img src="img/serviceicon/service03.png" class="card-img-top" alt="Service 3">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service3Title">SNS 프로필/배너 제작</h5>
-                    <p class="card-text" data-key="service3Description">서비스 3의 설명입니다.</p>
+                    <p class="card-text" data-key="service3Description">유튜브, X(구 트위터), 블로그 등 컨텐츠의 내용과 감성에 맞추어 프로필 사진이나 배너와 같은 페이지 장식 요소를 제작합니다.</p>
                 </div>
             </div>
         </a>
         <!-- Service 4 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 4">
+                <img src="img/serviceicon/service04.png" class="card-img-top" alt="Service 4">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service4Title">모션그래픽/영상편집</h5>
-                    <p class="card-text" data-key="service4Description">서비스 4의 설명입니다.</p>
+                    <p class="card-text" data-key="service4Description">역동적인 인트로 제작, 컷편집, 음악 삽입 등 전반적인 영상 편집을 합니다.</p>
                 </div>
             </div>
         </div>
@@ -165,10 +168,10 @@
         <!-- Service 5 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 5">
+                <img src="img/serviceicon/service05.png" class="card-img-top" alt="Service 5">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service5Title">웹사이트/UI 디자인</h5>
-                    <p class="card-text" data-key="service5Description">서비스 5의 설명입니다.</p>
+                    <p class="card-text" data-key="service5Description">세련되고 직관적인 사용자 인터페이스를 구상합니다.</p>
                 </div>
             </div>
         </a>
