--- a/index.html
+++ b/index.html
@@ -30,22 +30,6 @@
                 <!-- Empty Space -->
                 <div class="flex-grow-1"></div>
 
-                <!-- Language Selector -->
-                <div style="display: flex;">
-                    <img src="img/language.svg" alt="" style="height: 20px; margin-right: 20px; margin-top: 10px;">
-                    <select id="languageSelector" class="form-select" style="max-width: 180px; margin-right: 20px;">
-                        <option value="ko" selected style="font-family: stetica;" data-img_src="img/langicon/ru.png">
-                            Korean (한국어)
-                        </option>
-                        <option value="en" style="font-family: stetica;">
-                        English
-                        </option>
-                        <option value="ru" style="font-family: stetica;">
-                            Russian (Русский)
-                        </option>
-                    </select>
-                </div>
-
                 <!-- Menu Items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -117,8 +101,8 @@
 
     <!-- Services Section -->
 <div class="container py-5" id="services">
-    <h2 class="text-left mb-4" data-key="servicesTitle" style="font-family: stetica-bold;"><b>어떤 서비스를 찾으시나요?</b></h2>
-    <p data-key="serviceExplanation" style="font-family: stetica; max-width: 700px;">저희 스튜디오는 디지털 디자인 또는 아트와 관련된 여러 서비스를 제공합니다. 포토샵·일러스트레이터·프리미어프로·에프터이펙 등 어도비 계열 프로그램, MS오피스 프로그램, Medibang과 같은 페인팅 프로그램 등 다양한 소프트웨어를 광범위하게 활용하여 작업합니다. 저희 주요 소비자층은 개인 주문자로, 데뷔한 지 얼마 되지 않은 음반 아티스트나 소규모 유튜버의 의뢰를 자주 받습니다. 이를 감안하여 저렴한 가격에 소비자가 만족할 만한 결과물을 제공하도록 노력하고 있습니다.</p>
+    <h1 class="text-left mb-4" data-key="servicesTitle" style="font-family: stetica-bold;"><b>서비스 목록</b></h1>
+    <p data-key="serviceExplanation" style="font-family: stetica; max-width: 700px;"></p>
     <br>
     <br>
     <div class="row">
@@ -235,11 +219,13 @@
 
 <!-- Portfolio Section -->
 <div class="container py-5" id="portfolio">
-    <h2 class="text-left mb-4" data-key="portfolioTitle" style="font-family: stetica-bold;"><b>지금까지 완성했던 작업물</b></h2>
-    <p data-key="portfolioExplanation" style="font-family: stetica; max-width: 700px;">저희는 기본적으로 최신 트렌드를 따르되 깔끔하고 미니멀한 디자인을 지향합니다. 대표적인 예시로 Scribble의 BI와 이 웹사이트가 있죠. 하지만 주문자의 요청이나 맥락에 따라 스타일을 유연하게 바꾸어 작업하기도 합니다. 아래의 작업물을 참고하면 저희 역량과 지향점을 이해하는데 도움이 될 것입니다.</p>
+    <h1 class="text-left mb-4" data-key="portfolioTitle" style="font-family: stetica-bold;"><b>포트폴리오</b></h1>
+    <p data-key="portfolioExplanation" style="font-family: stetica; max-width: 700px;"></p>
     <br>
     <br>
-    
+    <h2>앨범 아트</h2>
+    <h2>로고</h2>
+    <h2>기타</h2>
     <!-- Row for Collage -->
     <div class="row g-4" style="border: red 0px solid; margin-bottom: 50px;">
 
@@ -303,7 +289,7 @@
 
 <!-- Contact Section -->
 <div class="container py-5" id="contacts">
-    <h2 class="text-left mb-4" data-key="contactTitle" style="font-family: stetica-bold;"><b>궁금한 점이 있으세요?</b></h2>
+    <h1 class="text-left mb-4" data-key="contactTitle" style="font-family: stetica-bold;"><b>연락주세요!</b></h1>
     <p data-key="contactsExplanation" style="font-family: stetica; max-width: 700px;">궁금한 점이 있거나, 주문을 진행하고 싶다면 언제나 편하게 연락 주세요! 최대한 빠르게 상담해드리고 주문 접수를 도와드리겠습니다.</p>
     <br>
     <br>
