--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="icon" href="img/icon.png">
     <style>
         .logo-item img {
-            height: 70px;
-            width: auto;
+            aspect-ratio: 10 / 4;
             object-fit: contain;
         }
 
@@ -226,10 +225,10 @@
         <!-- Service 7 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 7">
+                <img src="img/serviceicon/service07.png" class="card-img-top" alt="Service 7">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service7Title">디지털 아트</h5>
-                    <p class="card-text" data-key="service7Description">서비스 7의 설명입니다.</p>
+                    <p class="card-text" data-key="service7Description">레퍼런스를 참고하여 종이 또는 디지털 드로잉 앱을 활용한 아트를 제작합니다.</p>
                 </div>
             </div>
         </a>
@@ -350,7 +349,7 @@
                         <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
                             <div class="card portfolio-card">
                                 <div class="card-img">
-                                    <img src="img/portfolio/logos/Backspace.png" class="img-fluid">
+                                    <img src="img/portfolio/logos/scribble.png" class="img-fluid">
                                 </div>
                                 <div class="card-img-overlay"></div>
                             </div>
@@ -360,17 +359,7 @@
                         <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
                             <div class="card portfolio-card">
                                 <div class="card-img">
-                                    <img src="img/portfolio/logos/scribble_full.png" class="img-fluid">
-                                </div>
-                                <div class="card-img-overlay"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item logo-item">
-                        <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
-                            <div class="card portfolio-card">
-                                <div class="card-img">
-                                    <img src="img/portfolio/logos/biomium_full.png" class="img-fluid">
+                                    <img src="img/portfolio/logos/biomium.png" class="img-fluid">
                                 </div>
                                 <div class="card-img-overlay"></div>
                             </div>
@@ -381,6 +370,16 @@
                             <div class="card portfolio-card">
                                 <div class="card-img">
                                     <img src="img/portfolio/logos/overfly.png" class="img-fluid">
+                                </div>
+                                <div class="card-img-overlay"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item logo-item">
+                        <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
+                            <div class="card portfolio-card">
+                                <div class="card-img">
+                                    <img src="img/portfolio/logos/backspace.png" class="img-fluid">
                                 </div>
                                 <div class="card-img-overlay"></div>
                             </div>
