--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!--Custom-carousel-->
     <div class="custom-carousel">
     <div class="custom-carousel-track">
-        <div class="custom-slide" style="background-image: url(https://scribbbbbledesign.github.io/scribble/img/events/event1bg.png);">
+        <div class="custom-slide" style="background-image: url(img/events/event1bg.png);">
             <div style="margin-left: 20%; margin-top: 2%;">
                 <h1 style="font-size: 400%;"><b style="text-emphasis: circle; text-emphasis-position: over right;">저렴</b>하게<br>제작받자!</h1><p>포트폴리오를 만들기 위해 서비스를 저렴하게 제공하고 있습니다.</p></div>
             </div>
