--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="custom-carousel">
     <div class="custom-carousel-track">
         <div class="custom-slide" style="background-image: url(img/events/event1bg.png);">
-            <div style="margin-left: 20%;margin-right: 20%; margin-top: 2%;">
+            <div style="margin-left: 20%; margin-right: 20%; margin-top: 5%;">
                 <h1 style="font-size: 300%;"><b style="text-emphasis: circle; text-emphasis-position: over right;">저렴</b>하게<br>제작받자!</h1><p>포트폴리오를 만들기 위해 서비스를 저렴하게 제공하고 있습니다.</p></div>
             </div>
         <div class="custom-slide" style="background-image: url(img/events/event1bg.png);"></div>
@@ -271,10 +271,10 @@
         <!-- Service 8 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 8">
+                <img src="img/serviceicon/service08.png" class="card-img-top" alt="Service 8">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service8Title">PPT 제작</h5>
-                    <p class="card-text" data-key="service8Description">서비스 8의 설명입니다.</p>
+                    <p class="card-text" data-key="service8Description">전달하고자 하는 정보를 효과적으로 전달하는 동시에 트렌디한한 프레젠테이션을 제작합니다.</p>
                 </div>
             </div>
         </div>
