logo portfolio up[date

--- a/index.html
+++ b/index.html
@@ -431,6 +431,27 @@
                             </div>
                         </div>
                     </div>
+                    <div class="carousel-item logo-item">
+                        <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
+                            <div class="card portfolio-card">
+                                <div class="card-img">
+                                    <img src="img/portfolio/logos/agem.png" class="img-fluid">
+                                </div>
+                                <div class="card-img-overlay"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item logo-item">
+                        <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
+                            <div class="card portfolio-card">
+                                <div class="card-img">
+                                    <img src="img/portfolio/logos/yeou.png" class="img-fluid">
+                                </div>
+                                <div class="card-img-overlay"></div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 
                 <a class="carousel-control-prev bg-transparent w-aut" href="#logoCarousel" role="button" data-bs-slide="prev">
