--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="custom-carousel-track">
         <div class="custom-slide" style="background-image: url(img/events/event1bg.png);">
             <div style="margin-left: 20%; margin-right: 20%; margin-top: 5%;">
-                <h1 style="font-size: 300%;"><b style="text-emphasis: circle; text-emphasis-position: over right;">저렴</b>하게<br>제작받자!</h1><p>포트폴리오를 만들기 위해 서비스를 저렴하게 제공하고 있습니다.</p></div>
+                <h1 style="font-size: 300%;">앨범아트<br><b>만원이하</b>!</h1><p>입문 음악가 여러분을 응원합니다.</p></div>
             </div>
         <div class="custom-slide" style="background-image: url(img/events/event1bg.png);"></div>
         <div class="custom-slide"><img src="https://picsum.photos/1200/300?random=3" alt="Slide 3"></div>
