--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
         <!-- Service 9 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 9">
+                <img src="img/serviceicon/service09.png" class="card-img-top" alt="Service 9">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service9Title">MS 오피스 도움</h5>
-                    <p class="card-text" data-key="service9Description">서비스 9의 설명입니다.</p>
+                    <p class="card-text" data-key="service9Description">Microsoft Word, Excel, Powerpoint 등 사무용 소프트웨어와 관련된 도움을 드립니다.</p>
                 </div>
             </div>
         </a>
