--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
         <!-- Service 10 -->
         <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Service 10">
+                <img src="img/serviceicon/service10.png" class="card-img-top" alt="Service 10">
                 <div class="card-body">
                     <h5 class="card-title" data-key="service10Title">OS 설치/컴퓨터 사용 도움</h5>
-                    <p class="card-text" data-key="service10Description">서비스 10의 설명입니다.</p>
+                    <p class="card-text" data-key="service10Description">PC, 소프트웨어 설치·사용 등과 관련된 도움을 드립니다.</p>
                 </div>
             </div>
         </a>
