--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h1 style="font-size: 300%;">앨범아트<br><b>만원이하</b>!</h1><p>입문 음악가 여러분을 응원합니다.</p></div>
             </div>
         <div class="custom-slide" style="background-image: url(img/events/event1bg.png);"></div>
-        <div class="custom-slide"><img src="https://picsum.photos/1200/300?random=3" alt="Slide 3"></div>
+        <div class="custom-slide" style="background-image: url(img/events/event1bg.png);"></div>
     </div>
     <div class="custom-carousel-buttons">
         <button class="custom-button custom-prev carousel-control-prev-icon" style="margin-left: 20px;"></button>
