--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <br>
     <div class="row">
         <!-- Service 1 -->
-        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
+        <a href="services/01.html" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="img/serviceicon/service01.png" class="card-img-top" alt="Service 1">
                 <div class="card-body">
