--- a/services/01.html
+++ b/services/01.html
@@ -19,6 +19,7 @@
             max-width: 800px;
             margin: auto;
             padding: 20px;
+            align-items: center;
         }
         .image, .text {
             flex: 1;
@@ -29,9 +30,17 @@
             height: auto;
             border-radius: 10px;
         }
+        .text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
         @media (max-width: 600px) {
             .container {
                 flex-direction: column;
+            }
+            .text {
+                text-align: center;
             }
         }
     </style>
