--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="text-align: left; white-space: nowrap;">
                 <img src="img/logo.png" alt="" style="height: 20px; margin-right: 10px; margin-left: 10px;">
-                <span style="font-family: stetica;">Scribble </span>
+                <span style="font-family: stetica-bold;">Scribble</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
