--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
     
     <footer class="bg-bright text-black text-center py-3" style="background-color: rgb(225, 225, 225);">
-        <p data-key="footer" style="font-family: stetica;">&copy; 2024 Scribble | 모든 권리 보유</p>
+        <p data-key="footer" style="font-family: stetica;">&copy; 2025 Scribble</p>
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
