--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
         </a>
         <!-- Service 2 -->
-        <a href="" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
+        <a href="services/02.html" class="col-md-3 mb-4 expandonhover" style="text-decoration: none;">
             <div class="card">
                 <img src="img/serviceicon/service02.png" class="card-img-top" alt="Service 2">
                 <div class="card-body">
