--- a/services/02.html
+++ b/services/02.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>앨범아트 디자인 - Scribble</title>
+    <title>로고 디자인 - Scribble</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../img/icon.png">
@@ -78,11 +78,11 @@
     
     <div class="container">
         <div class="image">
-            <img src="../img/serviceicon/service01.png" alt="예제 이미지">
+            <img src="../img/serviceicon/service02.png" alt="예제 이미지">
         </div>
         <div class="text">
-            <h1><b>앨범아트 디자인</b></h1>
-            <p>음원을 시각적으로 표현할 최고의 방법을 모색하여 정서와 분위기를 효과적으로 전달할 수 있는 앨범 아트를 제작합니다.</p>
+            <h1><b>로고 디자인</b></h1>
+            <p>뚜렷한 정체성을 드러내야 하는 개인, 기업 또는 기타 단체에게 적합한 로고를 제작합니다.</p>
         </div>
     </div>
     <div class="container py-5" id="services">
@@ -94,20 +94,38 @@
             <!-- 1 -->
             <a href="" class="col-md-4 mb-4 expandonhover" style="text-decoration: none;">
                 <div class="card">
-                    <img src="../img/portfolio/album-arts/aecheoga.png" class="card-img-top" alt="Service 1">
+                    <img src="../img/portfolio/logos/scribble.png" class="card-img-top" alt="Service 1">
                     <div class="card-body">
-                        <h5 class="card-title" data-key="service1Title">애처가</h5>
-                        <p class="card-text" data-key="service1Description">김지은</p>
+                        <h5 class="card-title" data-key="service1Title">Scribble</h5>
+                        <p class="card-text" data-key="service1Description"></p>
                     </div>
                 </div>
             </a>
             <!-- 2 -->
             <a href="" class="col-md-4 mb-4 expandonhover" style="text-decoration: none;">
                 <div class="card">
-                    <img src="../img/portfolio/album-arts/mirror.png" class="card-img-top" alt="Service 2">
+                    <img src="../img/portfolio/logos/biomium.png" class="card-img-top" alt="Service 2">
                     <div class="card-body">
-                        <h5 class="card-title" data-key="service2Title">거울</h5>
-                        <p class="card-text" data-key="service2Description">에이범</p>
+                        <h5 class="card-title" data-key="service2Title">Biomium</h5>
+                        <p class="card-text" data-key="service2Description"></p>
+                    </div>
+                </div>
+            </a>
+            <a href="" class="col-md-4 mb-4 expandonhover" style="text-decoration: none;">
+                <div class="card">
+                    <img src="../img/portfolio/logos/ssambbong.png" class="card-img-top" alt="Service 2">
+                    <div class="card-body">
+                        <h5 class="card-title" data-key="service2Title">쌈뽕한 스껄이들</h5>
+                        <p class="card-text" data-key="service2Description"></p>
+                    </div>
+                </div>
+            </a>
+            <a href="" class="col-md-4 mb-4 expandonhover" style="text-decoration: none;">
+                <div class="card">
+                    <img src="../img/portfolio/logos/oneL.png" class="card-img-top" alt="Service 2">
+                    <div class="card-body">
+                        <h5 class="card-title" data-key="service2Title">OneL</h5>
+                        <p class="card-text" data-key="service2Description"></p>
                     </div>
                 </div>
             </a>        
