--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scribble</title>
+    <title>Scribloid</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -36,7 +36,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="text-align: left; white-space: nowrap;">
                 <img src="img/logo.png" alt="" style="height: 20px; margin-right: 10px; margin-left: 10px;">
-                <span style="font-family: stetica-bold;">Scribble</span>
+                <span style="font-family: stetica-bold;">Scribloid</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -549,7 +549,7 @@
 
     
     <footer class="bg-bright text-black text-center py-3" style="background-color: rgb(225, 225, 225);">
-        <p data-key="footer" style="font-family: stetica;">&copy; 2025 Scribble</p>
+        <p data-key="footer" style="font-family: stetica;">&copy; 2025 Scribloid</p>
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
