--- a/services/01.html
+++ b/services/01.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>앨범아트 디자인 - Scribble</title>
+    <title>앨범아트 디자인 - Scribloid</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../img/icon.png">
@@ -121,7 +121,7 @@
 
     
     <footer class="bg-bright text-black text-center py-3" style="background-color: rgb(225, 225, 225);">
-        <p data-key="footer" style="font-family: stetica;">&copy; 2025 Scribble</p>
+        <p data-key="footer" style="font-family: stetica;">&copy; 2025 Scribloid</p>
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
