--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                         <div class="col-md-3 expandonhover" style="margin-top: 3%; margin-bottom: 3%;">
                             <div class="card portfolio-card">
                                 <div class="card-img">
-                                    <img src="img/portfolio/logos/scribble.png" class="img-fluid">
+                                    <img src="img/portfolio/logos/scribloid.png" class="img-fluid">
                                 </div>
                                 <div class="card-img-overlay"></div>
                             </div>
@@ -527,13 +527,13 @@
                     <a href="https://www.youtube.com/channel/UC65U5xKjoprKir98hitzSUw" target="_blank" class="mx-2">
                         <img src="img/icons/youtube.png" alt="YouTube" style="max-width: 30px; max-height: 30px;">
                     </a>
-                    <a href="https://open.kakao.com/o/sIKEqD3g" target="_blank" class="mx-2">
+                    <a href="https://open.kakao.com/me/scribloid" target="_blank" class="mx-2">
                         <img src="img/icons/kakao.png" alt="Kakao" style="max-width: 30px; max-height: 30px;">
                     </a>
                     <a href="https://t.me/ScribbleSupportBot" target="_blank" class="mx-2">
                         <img src="img/icons/telegram.png" alt="Telegram" style="max-width: 30px; max-height: 30px;">
                     </a>
-                    <a href="https://www.instagram.com/scribbbbbledesign/profilecard/?igsh=MXF0eXF4bnc0bjQybw==" target="_blank" class="mx-2">
+                    <a href="https://www.instagram.com/scribloid_artstation?igsh=MXF0eXF4bnc0bjQybw==" target="_blank" class="mx-2">
                         <img src="img/icons/instagram.png" alt="Instagram" style="max-width: 30px; max-height: 30px;">
                     </a>
                 </div>
