--- a/services/02.html
+++ b/services/02.html
@@ -94,9 +94,9 @@
             <!-- 1 -->
             <a href="" class="col-md-4 mb-4 expandonhover" style="text-decoration: none;">
                 <div class="card">
-                    <img src="../img/portfolio/logos/scribble.png" class="card-img-top" alt="Service 1">
+                    <img src="../img/portfolio/logos/scribloid.png" class="card-img-top" alt="Service 1">
                     <div class="card-body">
-                        <h5 class="card-title" data-key="service1Title">Scribble</h5>
+                        <h5 class="card-title" data-key="service1Title">Scribloid</h5>
                         <p class="card-text" data-key="service1Description"></p>
                     </div>
                 </div>
